--- a/index.html
+++ b/index.html
@@ -11,14 +11,8 @@
 
 <header class="navbar">
     <div class="container nav-inner">
-        <div class="logo">
-            <a href="index.html"><img src="assets/images/DoubleU-logotype-24.png" alt="DoubleU"></a>
-        </div>
-        
-        <div class="menu-toggle" onclick="toggleMenu()">
-            <span></span><span></span><span></span>
-        </div>
-
+        <div class="logo"><a href="index.html"><img src="assets/images/DoubleU-logotype-24.png" alt="DoubleU"></a></div>
+        <div class="menu-toggle" onclick="toggleMenu()"><span></span><span></span><span></span></div>
         <nav id="nav-menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -35,10 +29,10 @@
     <div class="container">
         <p class="overline">Think Globally, Act Locally</p>
         <h1>Empowering Through Bridging The Gap.</h1>
-        <p class="hero-subtext" style="font-size: 19px; color: var(--text-secondary); margin-bottom: 45px; max-width: 650px;">Driving Unity, Zero To One. We specialize in helping technology innovators and global corporates navigate and thrive in the Taiwan and US markets.</p>
+        <p style="font-size: 19px; color: var(--text-secondary); margin-bottom: 45px; max-width: 650px;">Driving Unity, Zero To One. We specialize in helping technology innovators and global corporates navigate and thrive in the Taiwan and US markets.</p>
         <div class="hero-btns">
-            <a href="about.html" class="btn btn-dark">OUR STORY</a>
-            <a href="#contact" class="btn btn-outline">START A PROJECT</a>
+            <a href="about.html" class="btn btn-dark">Our Story</a>
+            <a href="#contact" class="btn btn-outline">Start a Project</a>
         </div>
     </div>
 </section>
@@ -48,11 +42,10 @@
         <div class="about-text">
             <p class="overline">Innovation For Impact</p>
             <h2>Who We Serve</h2>
-            <p>At DoubleU, we empower **Technology Innovators (Startups)** and **Corporates** looking to expand their footprint in Taiwan and the US. We bridge the cultural and business gaps to ensure your global vision becomes a local success.</p>
+            <p>At DoubleU, we empower **Technology Innovators (Startups)** and **Corporates** looking to expand their footprint in Taiwan and the US.</p>
             <a href="services.html" class="btn-text" style="display:inline-block; margin-top:20px; color:var(--accent); text-decoration:none; font-weight:600;">View Our Services →</a>
         </div>
-        <div class="about-image-placeholder">
-            </div>
+        <div class="about-image-placeholder" style="background:#eee; height:400px;"></div>
     </div>
 </section>
 
@@ -63,34 +56,22 @@
             <h2>Connect With Our Experts</h2>
             <p class="ready-text">Ready to transform your business vision into reality? Contact DoubleU Technology today.</p>
         </div>
-        
         <div class="custom-form-wrapper narrow">
             <form id="g-form">
                 <div class="form-row">
-                    <div class="form-group">
-                        <label>Name</label>
-                        <input type="text" placeholder="Full Name" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Email Address</label>
-                        <input type="email" placeholder="email@company.com" required>
-                    </div>
+                    <div class="form-group"><label>Name</label><input type="text" placeholder="Full Name" required></div>
+                    <div class="form-group"><label>Email Address</label><input type="email" placeholder="email@company.com" required></div>
                 </div>
-                <div class="form-group">
-                    <label>Message</label>
-                    <textarea rows="4" placeholder="How can we help your business?"></textarea>
-                </div>
+                <div class="form-group"><label>Message</label><textarea rows="4" placeholder="How can we help your business?"></textarea></div>
                 <button type="submit" class="submit-btn">Submit Connect Request</button>
-            </form> </div>
+            </form>
+        </div>
     </div>
 </section>
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo">
-            <img src="assets/images/DoubleU-logotype-27.png" alt="DoubleU">
-        </div>
-        <p>Taipei, Taiwan | info@doubleu-tech.com</p>
+        <div class="footer-logo"><img src="assets/images/DoubleU-logotype-27.png"></div>
         <p>&copy; 2025 DoubleU-Tech Advisory. All Rights Reserved.</p>
     </div>
 </footer>
