--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>DoubleU-Tech Advisory | Tech Strategy & Supply Chain Experts</title>
+    <title>Double U –Business Development & Go-To-Market Partner | Tech Strategy & Supply Chain Experts</title>
     <meta name="description" content="DoubleU-Tech Advisory bridges the gap between technology innovation and business application. Expert guidance in Semiconductor, IoT, and supply chain strategies in Taiwan and the US.">
     <meta name="keywords" content="DoubleU-Tech, Tech Advisory, Bert Sie, Teresa Jhan, Semiconductor, IoT, Supply Chain, Taiwan Tech, Business Development">
     <meta name="author" content="DoubleU-Tech Advisory">
@@ -358,5 +358,6 @@
 </script>
 </body>
 </html>
+
 
 
