--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="container">
         <div class="section-header">
             <span class="sub-title">Latest Updates</span>
-            <h2 class="main-title">Impact & Insights</h2>
+            <h2 class="main-title">Making Impact!</h2>
         </div>
 
         <div class="insights-scroller">
@@ -218,5 +218,6 @@
 
 </body>
 </html>
+
 
 
